--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "static-site-webpack-habr",
+  "name": "static-site-webpac-habr",
   "version": "2.0.0",
   "description": "HTML template",
   "main": "src/index.js",
@@ -9,11 +9,7 @@
     "start": "webpack-dev-server --mode development --open",
     "build": "webpack --mode production && prettier --print-width=120 --parser html --write dist/*.html"
   },
-  "dependencies": {
-    "bootstrap": "^4.3.1",
-    "jquery": "^3.3.1",
-    "popper.js": "^1.14.7"
-  },
+  "dependencies": {},
   "devDependencies": {
     "clean-webpack-plugin": "^1.0.1",
     "copy-webpack-plugin": "^5.0.0",
