--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "start": "webpack-dev-server --mode development --open",
     "build": "webpack --mode production && prettier --print-width=120 --parser html --write dist/*.html"
   },
-  "dependencies": {},
+  "dependencies": {
+    "bootstrap": "^4.3.1"
+  },
   "devDependencies": {
     "clean-webpack-plugin": "^1.0.1",
     "copy-webpack-plugin": "^5.0.0",
